demo - fixed issue with title getting cut off when longer than two rows

--- a/assets/css/main.compiled.css
+++ b/assets/css/main.compiled.css
@@ -116,6 +116,7 @@ p {
   width: 1170px;
   margin: 0px auto;
   height: auto;
+  margin-bottom: 70px;
 }
 .main {
   width: 1170px;
